fix(ArticleDetail): fix horizontal scrolling error

--- a/src/views/ArticleDetail/Comments/LatestComments/styles.module.css
+++ b/src/views/ArticleDetail/Comments/LatestComments/styles.module.css
@@ -1,4 +1,6 @@
 .latestComments {
+  overflow-x: hidden;
+
   @media (--sm-up) {
     width: 22.5rem;
   }
